--- a/進捗.md
+++ b/進捗.md
@@ -1,4 +1,4 @@
 |  　　　　　  |  実装  |　デバッグ　|
 | ----------- | ------ | -------- |
 |  勝ち負け判定  |  11/28  | |
-|  禁じ手判定　  |    | |
+|  禁じ手判定　  |  12/03  | |
