--- a/構想メモ.md
+++ b/構想メモ.md
@@ -13,8 +13,10 @@
 
 ### 碁石を打つアルゴリズムについて
 【方針】機械学習ではなく条件分岐を予め考えておく
-- (攻め)　先行の時：四三になる所に置きに行く
-- (守り)　後攻の時：四三を作らせない　特に四（飛び四）を作らせない
+- あらかじめ守るべきか攻めるべきかを判定する関数を用意して、その結果に応じて分岐
+- (攻め)　四三になる所に置きに行く
+- (守り)　四三を作らせない　特に四（飛び四）を作らせない
+- 置く場所のx座標、y座標を格納しておく構造体を用意しておき、構造体を返すようにする
 <br>
 ## 役割分担
 - 禁じ手判定: suu-y
