不要なコメントを削除し、体裁を整えた

--- a/進捗.md
+++ b/進捗.md
@@ -1,6 +1,6 @@
 |  　　　　　  |  実装  |　デバッグ　|
 | ----------- | ------ | -------- |
-|  勝ち負け判定  |  11/28  | |
-|  禁じ手判定　 |  12/03  | |
-|    攻め      |        |  |
-|    守り      |        |  |
+|  勝ち負け判定  |  11/28  |  12/19  |
+|  禁じ手判定　 |  12/03  | - | 
+|    攻め      |  12/19     | 12/19 |
+|    守り      |   12/19     | 12/19 |
